# DevAssistant

./: .gitignore  CHANGELOG.md  LICENSE  README.md
app/: CMakeLists.txt  pkg-rpm.sh  pkg-win-nsis.bat  run_android.bat  run_android.sh  run_ios.sh  run_unix.sh  run_win.bat
app/conf/: app_config.json  env.json  env_config.json  project.json
app/data/doc/: License.txt  Plan.txt  Release.md  Tools.md
app/data/plugins/project/: pkg.json  run.py
app/data/plugins/project/proj_pkg/: proj_pkg.py  run_pkg.py
app/data/plugins/project/project/: project.py
app/data/plugins/pytool/: README.md  pyt_file.py
app/doc/: build.md
app/scripts/: pkg-win-nsis.nsi  project.json  windeployqt-qml.bat
app/scripts/cmake/cmake-apple/: apple_func.cmake  apple_libs.cmake
app/scripts/cmake/cmake-apple/res/: MacOSXBundleInfo.plist.in
app/scripts/cmake/cmake-core/: build_clang.cmake  build_gcc.cmake  build_options.cmake  core_func.cmake  global.cmake  macros.cmake
app/scripts/cmake/cmake-py/: py_func.cmake  py_libs.cmake
app/scripts/cmake/cmake-qt/: qt_func.cmake  qt_libs.cmake
app/scripts/cmake/cmake-win/: win_func.cmake
app/scripts/pkg/: killproc.bat  pkg-win-nsis.bat  pkg-win-nsis.nsi
app/scripts/pkg-rpm/: app-action.xml  app-desktop  app_loader
app/scripts/pkg-rpm/SPECS/: app.spec
app/scripts/pkg-win/: Note.md  pkg-win-nsis.nsi
app/src/app/: app.cmake
app/src/app/DevAssistant/: AppLoader.cpp  AppLoader.h  DevAssistant.cmake  QDAMainWindow.cpp  QDAMainWindow.h  main.cpp
app/src/app/DevAssistant/Forms/: QDAMainWindow.ui
app/src/app/InstallReg/: InstallReg.cmake  main.cpp
app/src/app/QtDevAssistant/: QDAMainWindow.cpp  QDAMainWindow.h  QtDevAssistant.cmake  main.cpp
app/src/app/QtDevAssistant/Forms/: QDAMainWindow.ui
app/src/app/UnInstall/: UnInstall.cmake  main.cpp
app/src/kits/: kits.cmake
app/src/kits/CApp/: CApp.cmake  CApp.h  CAppConf.cpp  CAppConf.h  CAppDef.h
app/src/kits/CCoreKit/: CCKDefines.h  CCoreKit.cmake  CCoreKit.h  CKAppConf.cpp  CKAppConf.h  CKRegisterTable.h  CKSystemEnv.cpp  CKSystemEnv.h
app/src/kits/CCoreKit/log/: CKLog.h
app/src/kits/CCoreKit/os/: CKRegisterTable.cpp  CKRegisterTable.h  CKSystemEnv.cpp  CKSystemEnv.h
app/src/kits/CCoreKit/script/: CKPython.cpp  CKPython.h
app/src/kits/CCoreKit/utils/: CKFile.cpp  CKFile.h  CKString.cpp  CKString.h
app/src/kits/CHWD/: CHWD.cmake  CHWD.cpp  CHWD.h  CHWDDef.h
app/src/kits/CLog/: CAppConf.cpp  CAppConf.h  CKDefines.h  CLLog.h  CLog.cmake  CLog.h  CLogDef.h
app/src/kits/COSEnv/: CEAppLoader.cpp  CEAppLoader.h  CEAuthority.cpp  CEAuthority.h  CERegedit.cpp  CERegedit.h  CERegisterTable.cpp  CERegisterTable.h  CERightAction.cpp  CERightAction.h  CESystemEnv.cpp  CESystemEnv.h  CETrayIcon.cpp  CETrayIcon.h  COSEnv.cmake  COSEnv.h  COSEnvDef.h
app/src/kits/CScript/: CSPython.cpp  CSPython.h  CScript.cmake  CScript.h  CScriptDef.h
app/src/kits/CUtils/: CUFile.cpp  CUFile.h  CUString.cpp  CUString.h  CUTimer.cpp  CUTimer.h  CUtils.cmake  CUtils.h  CUtilsDef.h  def_build.h  def_macro.h  log.h  logger.cpp  logger.h  path_util.cpp  path_util.h  perf_monitor.cpp  perf_monitor.h  threadpool.cpp  threadpool.h  units_time.cpp  units_time.h
app/src/kits/CUtils/unused/: log.h
app/src/kits/DACoreKit/: DACoreKit.cmake  DACoreKit.h
app/src/qtmodules/: qtmodules.cmake
app/src/qtmodules/QtCoreKit/: QtCoreKit.cmake  QtCoreKit.h  QtCoreKitDef.h
app/src/qtmodules/QtCoreKit/encode/: QCKEncode.cpp  QCKEncode.h
app/src/qtmodules/QtCoreKit/object/: QCKObject.cpp  QCKObject.h
app/src/qtmodules/QtCoreKit/qml/: QCKQmlBridge.cpp  QCKQmlBridge.h  QCKQmlEngine.cpp  QCKQmlEngine.h  QCKQmlUtil.cpp  QCKQmlUtil.h
app/src/qtmodules/QtCoreKit/script/: QCKCmd.cpp  QCKCmd.h  QCKPython.cpp  QCKPython.h
app/src/qtmodules/QtCoreKit/utils/: QCKCmd.cpp  QCKCmd.h  QCKDefines.h  QCKFile.cpp  QCKFile.h  QCKJson.cpp  QCKJson.h
app/src/qtmodules/QtCustom/: QDACustomDialog.cpp  QDACustomDialog.h  QtCustom.cmake  QtCustom.h  QtCustomDef.h
app/src/qtmodules/QtEnvKit/: DABuildScript.cpp  DABuildScript.h  QDACheckEnvDialog.cpp  QDACheckEnvDialog.h  QtEnvKit.cmake  QtEnvKit.h  QtEnvKitDef.h
app/src/qtmodules/QtExample/: QDAExampleDialog.cpp  QDAExampleDialog.h  QtExample.cmake  QtExample.h  QtExampleDef.h
app/src/qtmodules/QtHelp/: QDAAppConfig.cpp  QDAAppConfig.h  QDAHelpDialog.cpp  QDAHelpDialog.h  QtHelp.cmake  QtHelp.h  QtHelpDef.h
app/src/qtmodules/QtHelp/Forms/: QDAHelpDialog.ui
app/src/qtmodules/QtPlan/: QDAPlanDialog.cpp  QDAPlanDialog.h  QtPlan.cmake  QtPlan.h  QtPlanDef.h
app/src/qtmodules/QtPractical/: QDAPracticalDialog.cpp  QDAPracticalDialog.h  QtPractical.cmake  QtPractical.h  QtPracticalDef.h
app/src/qtmodules/QtProject/: QDACheckEnvDialog.cpp  QDACheckEnvDialog.h  QDAProjectAddDialog.cpp  QDAProjectAddDialog.h  QDAProjectConfig.cpp  QDAProjectConfig.h  QDAProjectDetailDialog.cpp  QDAProjectDetailDialog.h  QDAProjectDialog.cpp  QDAProjectDialog.h  QDAProjectPkg.cpp  QDAProjectPkg.h  QtProject.cmake  QtProject.h  QtProjectDef.h
app/src/qtmodules/QtScriptsKit/: QSKPython.cpp  QSKPython.h  QtScriptsKit.cmake  QtScriptsKit.h
app/src/qtmodules/QtUIInfra/: QUIStyle.cpp  QUIStyle.h  QtUIInfra.cmake  QtUIInfra.h  QtUIInfraDef.h
app/src/tool/: tool.cmake
app/src/tool/DevEnv/: CodingTools.cpp  CodingTools.h  DevEnv.cmake  DevEnv.h
app/src/tool/GitTool/: GitTool.cmake  GitTool.h  GitToolDef.h  GithubEnv.h
app/src/tools/: tools.cmake
app/src/tools/DevEnv/: CMake.cpp  CMake.h  CodingTools.cpp  CodingTools.h  DevEnv.cmake  DevEnv.h  DevEnvDef.h
app/src/tools/GitTool/: GitTool.cmake  GitTool.h  GitToolDef.h  GithubEnv.cpp  GithubEnv.h
app/tools/: glog.sh  spdlog.bat  spdlog.sh
app/tools/dep_libs/: spdlog.bat  spdlog.sh
app/tools/env/: unix-core.sh  win-env.bat
app/tools/pkg_config/: install-cmake.bat
app/tools/python/: install-py-3.11.bat
plugins/templates/bazel/: MODULE.bazel  README.md  WORKSPACE.bazel  WORKSPACE.bazel-unix  WORKSPACE.bazel-win  test-cc.bat  test-cc.sh  test-ios.sh  test-ut.bat  test-ut.sh  test.sh
plugins/templates/bazel/src/: BUILD.bazel  main.cpp
(+191 files in other folders)
