# MIT License
# 
# Copyright (c) 2021~2024 [coder4869](https://github.com/coder4869)
# 
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
# 
# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.
# 
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.

# module(name = "demo-module", version = "1.0")

# apple
# bazel_dep(name = "rules_apple", version = "3.5.1", repo_name = "build_bazel_rules_apple")
# load("@build_bazel_rules_apple//apple:repositories.bzl", "apple_rules_dependencies")
# apple_rules_dependencies()

# bazel_dep(name = "apple_support", version = "1.15.1", repo_name = "build_bazel_apple_support")
# load("@build_bazel_apple_support//lib:repositories.bzl", "apple_support_dependencies")
# apple_support_dependencies()

# bazel_dep(name = "rules_swift", version = "1.18.0", repo_name = "build_bazel_rules_swift")
# load("@build_bazel_rules_swift//swift:repositories.bzl", "swift_rules_dependencies")
# swift_rules_dependencies()
# load("@build_bazel_rules_swift//swift:extras.bzl", "swift_rules_extra_dependencies")
# swift_rules_extra_dependencies()

