# Copyright (c) 2021~2024 [coder4869](https://github.com/coder4869)

# module(name = "demo-module", version = "1.0")
# bazel_dep(name = "spdlog", version = "1.14.1")

# apple
# bazel_dep(name = "rules_apple", version = "3.5.1", repo_name = "build_bazel_rules_apple")
# load("@build_bazel_rules_apple//apple:repositories.bzl", "apple_rules_dependencies")
# apple_rules_dependencies()

# bazel_dep(name = "apple_support", version = "1.15.1", repo_name = "build_bazel_apple_support")
# load("@build_bazel_apple_support//lib:repositories.bzl", "apple_support_dependencies")
# apple_support_dependencies()

# bazel_dep(name = "rules_swift", version = "1.18.0", repo_name = "build_bazel_rules_swift")
# load("@build_bazel_rules_swift//swift:repositories.bzl", "swift_rules_dependencies")
# swift_rules_dependencies()
# load("@build_bazel_rules_swift//swift:extras.bzl", "swift_rules_extra_dependencies")
# swift_rules_extra_dependencies()

