# MIT License
# 
# Copyright (c) 2021~2024 [coder4869](https://github.com/coder4869)
# 
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
# 
# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.
# 
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.

# apple section
# ios section: ios_application() contains objc_library()
load("@build_bazel_rules_apple//apple:ios.bzl", "ios_application", "ios_framework")
# https://github.com/bazelbuild/rules_swift/blob/master/doc/rules.md#swift_library
# load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")
# load("@rules_xcodeproj//xcodeproj:defs.bzl", "top_level_target", "xcodeproj")

objc_library(
    name = "oc_static",
    srcs = glob(["**/*.cpp"]),
    hdrs = glob(["**/*.h"]),
    # data = ["UrlGet/UrlGetViewController.xib"],
    # linkstatic = 1,
    deps = [ "//src/cc:cc_static" ],
)

ios_framework(
    name = "oc_shared",
    hdrs = glob(["**/*.h"]),
    bundle_id = "dev.coder4869.ios_fmwk",
    families = [ "iphone", "ipad" ],
    minimum_os_version = "11.0",
    infoplists = [ "Resources/Info.plist" ],
    deps = [ ":oc_static" ],
)

ios_application(
    name = "ios-app",
    bundle_id = "ios.demo.app",
    families = [ "iphone", "ipad" ],
    minimum_os_version = "11.0",
    infoplists = [ "Resources/Info.plist" ],
    visibility = [ "//visibility:public" ],
    # provisioning_profile = "<profile_name>.mobileprovision",
    deps = [ ":oc_static", "//src/cc:cc_static" ],
)
