# MIT License
# 
# Copyright (c) 2021~2024 [coder4869](https://github.com/coder4869)
# 
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
# 
# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.
# 
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.

load("//scripts/bazel:variables.bzl", 
    "OC_LINK_OPTS", "CC_VISIBILITY",
    "IOS_CPU_ARCH", "IOS_FAMILY",  "IOS_MIN_VERSION", "IOS_INFO_PLIST"
)
load("//scripts/bazel:func_apple.bzl", 
    "ios_bin",
    "oc_src", "oc_hdrs", "ios_fmwk", "ios_app", "xcode_proj"
)

# apple section
# ios section: ios_application() contains objc_library()
load("@build_bazel_rules_apple//apple:ios.bzl", "ios_application", "ios_framework")
# https://github.com/bazelbuild/rules_swift/blob/master/doc/rules.md#swift_library
# load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")
# load("@rules_xcodeproj//xcodeproj:defs.bzl", "top_level_target", "xcodeproj")

objc_library(
    name = "oc_static",
    srcs = oc_src(),
    hdrs = oc_hdrs(),
    # data = ["UrlGet/UrlGetViewController.xib"],
    # linkstatic = 1,
    linkopts = OC_LINK_OPTS,
    # ios_multi_cpus = IOS_CPU_ARCH,
    copts = [  
        "-arch", "x86_64"
    ],  
    deps = [ "//src/cc:cc_static" ],
)

ios_bin(
    name = "oc_bin",
    deps = [ "//src/cc:cc_static", ":oc_static" ],
)

ios_fmwk(
    name = "oc_shared",
    bundle_id = "dev.coder4869.ios_fmwk",
    deps = [ ":oc_static" ],
)

ios_app(
    name = "ios-app",
    bundle_id = "ios.demo.app",
    deps = [ ":oc_static", "//src/cc:cc_static" ],
)

xcode_proj(
    name = "Demo",
    proj_name = "Demo",
    top_level_targets = [":oc_static"]
)