# MIT License
# 
# Copyright (c) 2021~2024 [coder4869](https://github.com/coder4869)
# 
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
# 
# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.
# 
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.

load("//scripts/bazel:variables.bzl", "XC_BUILD_OS")

load("//scripts/bazel:func_apple.bzl", 
    "oc_lib", "ios_fmwk", "ios_app", "ios_bin", 
    "mac_app", "xcode_proj"
)

oc_lib(
    name = "oc_static",
    deps = [ "//src/cc:cc_static" ],
)

ios_fmwk(
    name = "oc_fmwk",
    bundle_id = "dev.coder4869.ios_fmwk",
    deps = [ ":oc_static" ],
)

ios_bin(
    name = "oc_bin",
    deps = [ "//src/cc:cc_static", ":oc_static" ],
)

ios_app(
    name = "ios-app",
    bundle_id = "ios.demo.app",
    deps = [ ":oc_static", "//src/cc:cc_static" ],
)

mac_app(
    name = "mac-app",
    bundle_id = "mac.demo.app",
    deps = [ ":oc_static", "//src/cc:cc_static" ],
)

xcode_proj(
    name = "Demo",
    proj_name = "Demo",
    top_level_targets = [":oc_static"]
)