# Copyright (c) 2021~2024 [coder4869](https://github.com/coder4869)

load("//scripts/bazel:variables.bzl", "XC_BUILD_OS")

load("//scripts/bazel:func_apple.bzl", 
    "oc_lib", "ios_fmwk", "ios_app", "ios_bin", 
    "mac_app", "xcode_proj"
)

oc_lib(
    name = "oc_static",
    deps = [ "//src/cc:cc_static" ],
)

ios_fmwk(
    name = "oc_fmwk",
    bundle_id = "dev.coder4869.ios_fmwk",
    deps = [ ":oc_static" ],
)

ios_bin(
    name = "oc_bin",
    deps = [ "//src/cc:cc_static", ":oc_static" ],
)

ios_app(
    name = "ios-app",
    bundle_id = "ios.demo.app",
    deps = [ ":oc_static", "//src/cc:cc_static" ],
)

mac_app(
    name = "mac-app",
    bundle_id = "mac.demo.app",
    deps = [ ":oc_static", "//src/cc:cc_static" ],
)

load("@rules_xcodeproj//xcodeproj:defs.bzl", "top_level_target")
xcode_proj(
    name = "XCodeDemo",
    proj_name = "XCodeDemo",
    top_level_targets = [
        top_level_target(":ios-app", target_environments = ["simulator"]),
        # top_level_target(":ios-app", target_environments = ["device", "simulator"]),
    ]
)

# load("@xchammer//:BazelExtensions/xcodeproject.bzl", "xcode_project")
# xcode_project(
#     name = "XcodeProject",
#     targets = [ ":ios-app" ],
# )